--- a/spork/Makefile
+++ b/spork/Makefile
@@ -4,7 +4,17 @@ workers.txt:
 stop:
 	aws ec2 stop-instances --instance-ids `aws ec2 describe-instances | grep -i instanceid | cut -d\" -f4`
 
-# tests
+launch:
+	aws ec2 run-instances \
+	    --image-id ami-0c803b171269e2d72 \
+	    --instance-type t2.micro \
+	    --security-groups launch-wizard-1 \
+	    --key-name hazsoup \
+	    --count 4 > launch-log.json
+	aws ec2 describe-instances | \
+	    grep -i publicdns | cut -d\" -f4 | uniq | grep com > workers.txt
+
+# local tests
 
 wc_nano_map_only:
 	python3 -m fire wc_nano.py WordCount map_only ../data/bluecorpus.txt bluecounts.txt 
