working version of hazsoup.py

--- a/spork/Makefile
+++ b/spork/Makefile
@@ -31,3 +31,10 @@ wc_micro_map_only:
 wc_micro:
 	python3 -m fire wc_micro.py WordCount map_reduce ../data/bluecorpus.txt bluecounts.txt 
 	grep -w this bluecounts.txt | head -10
+
+wc_hz:
+	python3 hazsoup.py cloud setup --local_files wc_hz.py	
+	python3 hazsoup.py fs put ../data/bluecorpus.txt blue.txt
+	python3 hazsoup.py run map_reduce wc_hz.py WordCount blue.txt bluecounts.txt
+	python3 hazsoup.py fs get_merge bluecounts.txt bluecounts.txt
+	grep -w this bluecounts.txt | head -10
